--- a/index.html
+++ b/index.html
@@ -283,5 +283,22 @@
             </div>
     </div>
 </section>
+<!--skill-section-->
+<section class="skill-section">
+    <div class="container">
+        <div class="skill-cont">
+            <div class="skill-pic">
+                <img src="images/man.jpg" alt="" width="100%">
+            </div>
+            <div class="skill-pic">
+                <div class="skill-per">
+                    <div class="ratio-per">
+                        
+                    </div><div class="ratio-per"></div><div class="ratio-per"></div><div class="ratio-per"></div><div class="ratio-per"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
