--- a/index.html
+++ b/index.html
@@ -243,62 +243,105 @@
         </div>
 
     </section>
-<!--team-section-->
-<section class="about-sec">
-    <div class="container">
-        <div class="our-about">
+    <!--team-section-->
+    <section class="about-sec">
+        <div class="container">
+            <div class="our-about">
                 <h2 class="about-h2">MEET OUR TEAM</h2>
                 <div class="line"></div>
                 <p class="about-pera">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
             </div>
             <div class="common-cont">
                 <div class="team-member">
-                   <div class="team-pic-mem">
+                    <div class="team-pic-mem">
                         <div class="team-pic">
-                        <img src="images/team1.jpg" alt="" width="100%">
-                    </div><div class="name-member">
-                    <h6 class="name-txt">Gonzalez Gina</h6>
-                    <p class="name-web">Web Developer</p></div>
-                   </div>
-                   
+                            <img src="images/team1.jpg" alt="" width="100%">
+                        </div>
+                        <div class="name-member">
+                            <h6 class="name-txt">Gonzalez Gina</h6>
+                            <p class="name-web">Web Developer</p>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="team-member">
                     <div class="team-pic-mem">
                         <div class="team-pic">
-                        <img src="images/team2.jpg" alt="" width="100%">
-                    </div><div class="name-member">
-                    <h6 class="name-txt">Holly Vincenzini</h6>
-                    <p class="name-web">Media Partner</p></div>
-                   </div>
+                            <img src="images/team2.jpg" alt="" width="100%">
+                        </div>
+                        <div class="name-member">
+                            <h6 class="name-txt">Holly Vincenzini</h6>
+                            <p class="name-web">Media Partner</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="team-member">
                     <div class="team-pic-mem">
                         <div class="team-pic">
-                        <img src="images/team3.jpg" alt="" width="100%">
-                    </div><div class="name-member">
-                    <h6 class="name-txt">Ramirez Minita</h6>
-                    <p class="name-web">Graphic Design</p></div>
-                   </div>
-                </div>
-            </div>
-    </div>
-</section>
-<!--skill-section-->
-<section class="skill-section">
-    <div class="container">
-        <div class="skill-cont">
-            <div class="skill-pic">
-                <img src="images/man.jpg" alt="" width="100%">
-            </div>
-            <div class="skill-pic">
-                <div class="skill-per">
-                    <div class="ratio-per">
-                        
-                    </div><div class="ratio-per"></div><div class="ratio-per"></div><div class="ratio-per"></div><div class="ratio-per"></div>
+                            <img src="images/team3.jpg" alt="" width="100%">
+                        </div>
+                        <div class="name-member">
+                            <h6 class="name-txt">Ramirez Minita</h6>
+                            <p class="name-web">Graphic Design</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+    <!--skill-section-->
+    <section class="skill-section">
+        <div class="container">
+            <div class="skill-cont">
+                <div class="skill-pic">
+                    <img src="images/man.jpg" alt="" width="100%">
+                </div>
+                <div class="skill-pic">
+                    <div class="skill-per">
+                        <div class="ratio-per">
+                            <div class="skill-text">
+                                <span class="skill-txt-code">Web Development</span>
+                            </div>
+                            <div class="color-red per-red">
+                                <span class="per-txt">89%</span>
+                            </div>
+                        </div>
+                        <div class="ratio-per">
+                            <div class="skill-text">
+                                <span class="skill-txt-code">Online Marketing</span>
+                            </div>
+                            <div class="color-red per-red2">
+                                <span class="per-txt">58%</span>
+                            </div>
+                        </div>
+                        <div class="ratio-per">
+                            <div class="skill-text">
+                                <span class="skill-txt-code">Digital Media</span>
+                            </div>
+                            <div class="color-red per-red3">
+                                <span class="per-txt">49%</span>
+                            </div>
+                        </div>
+                        <div class="ratio-per">
+                            <div class="skill-text">
+                                <span class="skill-txt-code">Photography</span>
+                            </div>
+                            <div class="color-red per-red4">
+                                <span class="per-txt">76%</span>
+                            </div>
+                        </div>
+                        <div class="ratio-per">
+                            <div class="skill-text">
+                                <span class="skill-txt-code">Creative Design</span>
+                            </div>
+                            <div class="color-red per-red5">
+                                <span class="per-txt">64%</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
