--- a/index.html
+++ b/index.html
@@ -343,5 +343,146 @@
             </div>
         </div>
     </section>
+<!--client-section-->
+<section class="about-sec">
+    <div class="container">
+        <div class="our-about">
+                <h2 class="about-h2">OUR HAPPY CLIENTS</h2>
+                <div class="line"></div>
+                <p class="about-pera">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
+            </div>
+            <div class="picture-client">
+                <div class="client-info">
+                    <div class="clinet-pic">
+                        <img src="images/c3.jpg" alt="" >
+                        <p class="client-info">Our successful construction approach is based on aggressive subcontractor administration, employ-ment of competent personnel, accurate schedule control, quality control and cost control. We employ only qualified subcontractors who share our goal in creating quality projects.</p>
+                        <h6 class="client-name">- Spryte Loriano -</h6>
+                    </div>
+                    <div class="dot">
+                        <div class="dot-inner">
+                            <div class="red"></div>
+                        </div>
+                        <div class="dot-inner">
+                            <div class="plain"></div>
+                        </div>
+                        <div class="dot-inner">
+                            <div class="plain"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+</section>
+<!--price-section-->
+<section class="price-sec">
+    <div class="container">
+        <div class="skill-cont">
+            <div class="team-member">
+                <div class="price-inner">
+                    <h4>Basic</h4>
+                    <p>The best to start</p>
+                    <strong class="color-1">
+                        $9.99 <span>/monthly</span>
+                    </strong>
+                    <ul>
+                        <li class="clr-one">3,600 Keywords</li>
+                        <li>50 Social Accounts</li>
+                        <li class="clr-one">25 Analytics Campaigns</li>
+                        <li>45 Email Accounts</li>
+                        <li class="clr-one">24/7 Support</li>
+                    </ul>
+                    <a href="" class="buy-client">BUY IT NOW</a>
+                </div>
+            </div>
+            <div class="team-member"> <div class="price-inner">
+                    <h4>Basic</h4>
+                    <p>The best to start</p>
+                    <strong class="color-2">
+                        $9.99 <span>/monthly</span>
+                    </strong>
+                    <ul>
+                        <li class="clr-one">3,600 Keywords</li>
+                        <li>50 Social Accounts</li>
+                        <li class="clr-one">25 Analytics Campaigns</li>
+                        <li>45 Email Accounts</li>
+                        <li class="clr-one">24/7 Support</li>
+                    </ul>
+                    <a href="" class="buy-client">BUY IT NOW</a>
+                </div></div>
+            <div class="team-member"> <div class="price-inner">
+                    <h4>Basic</h4>
+                    <p>The best to start</p>
+                    <strong class="color-3">
+                        $9.99 <span>/monthly</span>
+                    </strong>
+                    <ul>
+                        <li class="clr-one">3,600 Keywords</li>
+                        <li>50 Social Accounts</li>
+                        <li class="clr-one">25 Analytics Campaigns</li>
+                        <li>45 Email Accounts</li>
+                        <li class="clr-one">24/7 Support</li>
+                    </ul>
+                    <a href="" class="buy-client">BUY IT NOW</a>
+                </div></div>
+        </div>
+    </div>
+</section>
+<!--blog-sec-->
+<section class="about-sec">
+    <div class="container">
+        <div class="our-about">
+                <h2 class="about-h2">OUR LATEST BLOG</h2>
+                <div class="line"></div>
+                <p class="about-pera">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
+            </div>
+           <div class="common-cont">
+               <div class="team-member">
+                   <div class="blog-data">
+                       <img src="images/blog.jpg" alt="" width="100%">
+                       <div class="blog-text">
+                           <h6><a href="" class="blog-ref">Playback: Akufo-Addo speaks to business community</a></h6>
+                           <a href="">
+                               Posted by 
+                               <span class="admin">admin</span>
+                                at 04 Feb, 2017
+                           </a>
+                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna sed accumsan... <a href="">Read More</a></p>
+                           
+                       </div>
+                   </div>
+               </div> 
+               <div class="team-member">
+                                      <div class="blog-data">
+                       <img src="images/blog2.jpg" alt="" width="100%">
+                       <div class="blog-text">
+                           <h6><a href="" class="blog-ref">Playback: Akufo-Addo speaks to business community</a></h6>
+                           <a href="">
+                               Posted by 
+                               <span class="admin">admin</span>
+                                at 04 Feb, 2017
+                           </a>
+                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna sed accumsan... <a href="">Read More</a></p>
+                       </div>
+                   </div>
+               </div> 
+               <div class="team-member">
+                                      <div class="blog-data">
+                       <img src="images/blog3.jpg" alt="" width="100%">
+                       <div class="blog-text">
+                           <h6><a href="" class="blog-ref">Playback: Akufo-Addo speaks to business community</a></h6>
+                           <a href="">
+                               Posted by 
+                               <span class="admin">admin</span>
+                                at 04 Feb, 2017
+                           </a>
+                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna sed accumsan...<a href="">Read More</a> </p>
+                       </div>
+                   </div>
+               </div>
+           </div> 
+    </div>
+</section>
+<!--partner-sec-->
+<section class="partner-sec"></section>
 </body>
 </html>
