--- a/index.html
+++ b/index.html
@@ -343,10 +343,10 @@
             </div>
         </div>
     </section>
-<!--client-section-->
-<section class="about-sec">
-    <div class="container">
-        <div class="our-about">
+    <!--client-section-->
+    <section class="about-sec">
+        <div class="container">
+            <div class="our-about">
                 <h2 class="about-h2">OUR HAPPY CLIENTS</h2>
                 <div class="line"></div>
                 <p class="about-pera">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
@@ -354,7 +354,7 @@
             <div class="picture-client">
                 <div class="client-info">
                     <div class="clinet-pic">
-                        <img src="images/c3.jpg" alt="" >
+                        <img src="images/c3.jpg" alt="">
                         <p class="client-info">Our successful construction approach is based on aggressive subcontractor administration, employ-ment of competent personnel, accurate schedule control, quality control and cost control. We employ only qualified subcontractors who share our goal in creating quality projects.</p>
                         <h6 class="client-name">- Spryte Loriano -</h6>
                     </div>
@@ -371,118 +371,177 @@
                     </div>
                 </div>
             </div>
-    </div>
-</section>
-<!--price-section-->
-<section class="price-sec">
-    <div class="container">
-        <div class="skill-cont">
-            <div class="team-member">
-                <div class="price-inner">
-                    <h4>Basic</h4>
-                    <p>The best to start</p>
-                    <strong class="color-1">
-                        $9.99 <span>/monthly</span>
-                    </strong>
-                    <ul>
-                        <li class="clr-one">3,600 Keywords</li>
-                        <li>50 Social Accounts</li>
-                        <li class="clr-one">25 Analytics Campaigns</li>
-                        <li>45 Email Accounts</li>
-                        <li class="clr-one">24/7 Support</li>
-                    </ul>
-                    <a href="" class="buy-client">BUY IT NOW</a>
+        </div>
+    </section>
+    <!--price-section-->
+    <section class="price-sec">
+        <div class="container">
+            <div class="skill-cont">
+                <div class="team-member">
+                    <div class="price-inner">
+                        <h4>Basic</h4>
+                        <p>The best to start</p>
+                        <strong class="color-1">
+                            $9.99 <span>/monthly</span>
+                        </strong>
+                        <ul>
+                            <li class="clr-one">3,600 Keywords</li>
+                            <li>50 Social Accounts</li>
+                            <li class="clr-one">25 Analytics Campaigns</li>
+                            <li>45 Email Accounts</li>
+                            <li class="clr-one">24/7 Support</li>
+                        </ul>
+                        <a href="" class="buy-client">BUY IT NOW</a>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="price-inner">
+                        <h4>Basic</h4>
+                        <p>The best to start</p>
+                        <strong class="color-2">
+                            $9.99 <span>/monthly</span>
+                        </strong>
+                        <ul>
+                            <li class="clr-one">3,600 Keywords</li>
+                            <li>50 Social Accounts</li>
+                            <li class="clr-one">25 Analytics Campaigns</li>
+                            <li>45 Email Accounts</li>
+                            <li class="clr-one">24/7 Support</li>
+                        </ul>
+                        <a href="" class="buy-client">BUY IT NOW</a>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="price-inner">
+                        <h4>Basic</h4>
+                        <p>The best to start</p>
+                        <strong class="color-3">
+                            $9.99 <span>/monthly</span>
+                        </strong>
+                        <ul>
+                            <li class="clr-one">3,600 Keywords</li>
+                            <li>50 Social Accounts</li>
+                            <li class="clr-one">25 Analytics Campaigns</li>
+                            <li>45 Email Accounts</li>
+                            <li class="clr-one">24/7 Support</li>
+                        </ul>
+                        <a href="" class="buy-client">BUY IT NOW</a>
+                    </div>
                 </div>
             </div>
-            <div class="team-member"> <div class="price-inner">
-                    <h4>Basic</h4>
-                    <p>The best to start</p>
-                    <strong class="color-2">
-                        $9.99 <span>/monthly</span>
-                    </strong>
-                    <ul>
-                        <li class="clr-one">3,600 Keywords</li>
-                        <li>50 Social Accounts</li>
-                        <li class="clr-one">25 Analytics Campaigns</li>
-                        <li>45 Email Accounts</li>
-                        <li class="clr-one">24/7 Support</li>
-                    </ul>
-                    <a href="" class="buy-client">BUY IT NOW</a>
-                </div></div>
-            <div class="team-member"> <div class="price-inner">
-                    <h4>Basic</h4>
-                    <p>The best to start</p>
-                    <strong class="color-3">
-                        $9.99 <span>/monthly</span>
-                    </strong>
-                    <ul>
-                        <li class="clr-one">3,600 Keywords</li>
-                        <li>50 Social Accounts</li>
-                        <li class="clr-one">25 Analytics Campaigns</li>
-                        <li>45 Email Accounts</li>
-                        <li class="clr-one">24/7 Support</li>
-                    </ul>
-                    <a href="" class="buy-client">BUY IT NOW</a>
-                </div></div>
         </div>
-    </div>
-</section>
-<!--blog-sec-->
-<section class="about-sec">
-    <div class="container">
-        <div class="our-about">
+    </section>
+    <!--blog-sec-->
+    <section class="about-sec">
+        <div class="container">
+            <div class="our-about">
                 <h2 class="about-h2">OUR LATEST BLOG</h2>
                 <div class="line"></div>
                 <p class="about-pera">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
             </div>
-           <div class="common-cont">
-               <div class="team-member">
-                   <div class="blog-data">
-                       <img src="images/blog.jpg" alt="" width="100%">
-                       <div class="blog-text">
-                           <h6><a href="" class="blog-ref">Playback: Akufo-Addo speaks to business community</a></h6>
-                           <a href="">
-                               Posted by 
-                               <span class="admin">admin</span>
+            <div class="common-cont">
+                <div class="team-member">
+                    <div class="blog-data">
+                        <img src="images/blog.jpg" alt="" width="100%">
+                        <div class="blog-text">
+                            <h6><a href="" class="blog-ref">Playback: Akufo-Addo speaks to business community</a></h6>
+                            <a href="">
+                                Posted by
+                                <span class="admin">admin</span>
                                 at 04 Feb, 2017
-                           </a>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna sed accumsan... <a href="">Read More</a></p>
-                           
-                       </div>
-                   </div>
-               </div> 
-               <div class="team-member">
-                                      <div class="blog-data">
-                       <img src="images/blog2.jpg" alt="" width="100%">
-                       <div class="blog-text">
-                           <h6><a href="" class="blog-ref">Playback: Akufo-Addo speaks to business community</a></h6>
-                           <a href="">
-                               Posted by 
-                               <span class="admin">admin</span>
+                            </a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna sed accumsan... <a href="">Read More</a></p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="blog-data">
+                        <img src="images/blog2.jpg" alt="" width="100%">
+                        <div class="blog-text">
+                            <h6><a href="" class="blog-ref">Playback: Akufo-Addo speaks to business community</a></h6>
+                            <a href="">
+                                Posted by
+                                <span class="admin">admin</span>
                                 at 04 Feb, 2017
-                           </a>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna sed accumsan... <a href="">Read More</a></p>
-                       </div>
-                   </div>
-               </div> 
-               <div class="team-member">
-                                      <div class="blog-data">
-                       <img src="images/blog3.jpg" alt="" width="100%">
-                       <div class="blog-text">
-                           <h6><a href="" class="blog-ref">Playback: Akufo-Addo speaks to business community</a></h6>
-                           <a href="">
-                               Posted by 
-                               <span class="admin">admin</span>
+                            </a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna sed accumsan... <a href="">Read More</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="blog-data">
+                        <img src="images/blog3.jpg" alt="" width="100%">
+                        <div class="blog-text">
+                            <h6><a href="" class="blog-ref">Playback: Akufo-Addo speaks to business community</a></h6>
+                            <a href="">
+                                Posted by
+                                <span class="admin">admin</span>
                                 at 04 Feb, 2017
-                           </a>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna sed accumsan...<a href="">Read More</a> </p>
-                       </div>
-                   </div>
-               </div>
-           </div> 
-    </div>
-</section>
-<!--partner-sec-->
-<section class="partner-sec"></section>
+                            </a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis iaculis velit in tristique. Curabitur ac urna urna sed accumsan...<a href="">Read More</a> </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--partner-sec-->
+    <section class="partner-sec">
+        <div class="container">
+            <div class="part-common">
+                <div class="partner-logo">
+                    <div class="part-icon">
+                        <img src="images/p1.png" alt="">
+                    </div>
+                </div>
+                <div class="partner-logo">
+                    <div class="part-icon">
+                        <img src="images/p2.png" alt="">
+                    </div>
+                </div>
+                <div class="partner-logo">
+                    <div class="part-icon">
+                        <img src="images/p3.png" alt="">
+                    </div>
+                </div>
+                <div class="partner-logo">
+                    <div class="part-icon">
+                        <img src="images/p4.png" alt="">
+                    </div>
+                </div>
+                <div class="partner-logo">
+                    <div class="part-icon">
+                        <img src="images/p5.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- location-sec-->
+    <section class="loc-sec">
+        <div class="container">
+            <div class="common">
+                <div class="contact">
+                    <h2 class="loc-head">CONTACT INFO</h2>
+                    <p class="loc-pera">There are many variations of passages of Lorem Ipsum available, but the majori have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a pas of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
+                    </p>
+                    <p class="loc-pera">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ididunt ut labore et dolore magna aliqua.</p>
+                    <ul class="loc-ul">
+                        <li class="loc-items">
+                            <div class="loc-icon">
+                                <span class="fas fa-map-marker-alt"></span>
+                            </div>
+                            
+                        </li>
+                        <li class="loc-items"></li>
+                        <li class="loc-items"></li>
+                    </ul>
+                </div>
+                <div class="contact"></div>
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
