location-section complited

--- a/index.html
+++ b/index.html
@@ -532,13 +532,29 @@
                             <div class="loc-icon">
                                 <span class="fas fa-map-marker-alt"></span>
                             </div>
+                            <h6 class="icon-h6">Address</h6>
+                            <p>Freedom Way, Jersey City, NJ 07305, USA</p>
                             
                         </li>
-                        <li class="loc-items"></li>
-                        <li class="loc-items"></li>
+                        <li class="loc-items">
+                             <div class="loc-icon">
+                                <span class="fas fa-phone-alt"></span>
+                            </div>
+                            <h6 class="icon-h6">PHONE</h6>
+                            <p>+88 01911854378</p>
+                        </li>
+                        <li class="loc-items">
+                             <div class="loc-icon">
+                                <span class="fas fa-envelope"></span>
+                            </div>
+                            <h6 class="icon-h6">EMAIL</h6>
+                            <p>backpiper.com@gmail.com</p>
+                        </li>
                     </ul>
                 </div>
-                <div class="contact"></div>
+                <div class="contact">
+                    <h2 class="loc-head">OUR LOCATION</h2>
+                </div>
             </div>
 
         </div>
