--- a/index.html
+++ b/index.html
@@ -534,17 +534,17 @@
                             </div>
                             <h6 class="icon-h6">Address</h6>
                             <p>Freedom Way, Jersey City, NJ 07305, USA</p>
-                            
+
                         </li>
                         <li class="loc-items">
-                             <div class="loc-icon">
+                            <div class="loc-icon">
                                 <span class="fas fa-phone-alt"></span>
                             </div>
                             <h6 class="icon-h6">PHONE</h6>
                             <p>+88 01911854378</p>
                         </li>
                         <li class="loc-items">
-                             <div class="loc-icon">
+                            <div class="loc-icon">
                                 <span class="fas fa-envelope"></span>
                             </div>
                             <h6 class="icon-h6">EMAIL</h6>
@@ -554,9 +554,39 @@
                 </div>
                 <div class="contact">
                     <h2 class="loc-head">OUR LOCATION</h2>
+                    <div class="map-main">
+                        <div class="map-img">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.358342824274!2d72.59097191496761!3d23.010611384959123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e85ce9f31d89b%3A0x96eb648e21e369fc!2sG-9+Tech+house!5e0!3m2!1sen!2sin!4v1563879803523!5m2!1sen!2sin" width="100%" height="550" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        </div>
+                    </div>
                 </div>
             </div>
 
+        </div>
+    </section>
+    <!--    form-sec-->
+    <section class="about-sec">
+        <div class="container">
+            <h2 class="send-h2">SEND MESSAGE</h2>
+            <div class="common-form">
+                <div class="form-main">
+                    <div class="form-upr">First Name*</div>
+                </div>
+                <div class="form-main">
+                    <div class="form-upr">Last Name*</div>
+                </div>
+                <div class="form-main">
+                    <div class="form-upr">Your Email*</div>
+                </div>
+
+            </div>
+            <div class="form-sub">
+                <div class="form-upr">Subject</div>
+            </div>
+            <div class="form-sub">
+                <div class="form-msg">Write Message</div>
+            </div>
+            <a href="" class="send">send message</a>
         </div>
     </section>
 </body>
