--- a/index.html
+++ b/index.html
@@ -562,11 +562,7 @@
                 </div>
             </div>
 
-        </div>
-    </section>
-    <!--    form-sec-->
-    <section class="about-sec">
-        <div class="container">
+
             <h2 class="send-h2">SEND MESSAGE</h2>
             <div class="common-form">
                 <div class="form-main">
@@ -575,7 +571,7 @@
                 <div class="form-main">
                     <div class="form-upr">Last Name*</div>
                 </div>
-                <div class="form-main">
+                <div class="form-main-you">
                     <div class="form-upr">Your Email*</div>
                 </div>
 
@@ -589,5 +585,24 @@
             <a href="" class="send">send message</a>
         </div>
     </section>
+    <!--    footer-section-->
+    <footer class="footer-section">
+        <div class="container">
+            <a href="" class="footer-logo">
+                <img src="images/logo.jpg" alt="">
+            </a>
+            <ul>
+                <li><a href="" class="foot-soc-icon"><span class="fab fa-facebook-f"></span></a></li>
+                <li><a href="" class="foot-soc-icon2"><span class="fab fa-twitter"></span></a></li>
+                <li><a href="" class="foot-soc-icon3"><span class="fab fa-pinterest-p"></span></a></li>
+                <li><a href="" class="foot-soc-icon4"><span class="fab fa-linkedin-in"></span></a></li>
+                <li><a href="" class="foot-soc-icon5"><span class="fab fa-skype"></span></a></li>
+                <li><a href="" class="foot-soc-icon6"><span class="fab fa-flickr"></span></a></li>
+                <li><a href="" class="foot-soc-icon7"><span class="fab fa-dribbble"></span></a></li>
+                <li><a href="" class="foot-soc-icon8"><span class="fas fa-rss"></span></a></li>
+            </ul>
+            <p>Copyright @2018 All rights reserved | This template is made with <span class="fas fa-heart"></span>  by <a href="" class="color-foot">Colorlib</a></p>
+        </div>
+    </footer>
 </body>
 </html>
