--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                 </div>
                 <div class="nav-menu">
                     <ul class="nav-list">
-                        <li class="nav-list-items"><a href="" class="nav-name nav-clr">home</a></li>
-                        <li class="nav-list-items"><a href="" class="nav-name">about</a></li>
-                        <li class="nav-list-items"><a href="" class="nav-name">service</a></li>
-                        <li class="nav-list-items"><a href="" class="nav-name">portfolio</a></li>
-                        <li class="nav-list-items"><a href="" class="nav-name">team</a></li>
-                        <li class="nav-list-items"><a href="" class="nav-name">skill</a></li>
-                        <li class="nav-list-items"><a href="" class="nav-name">client</a></li>
-                        <li class="nav-list-items"><a href="" class="nav-name">pricing</a></li>
-                        <li class="nav-list-items"><a href="" class="nav-name">blog</a></li>
-                        <li class="nav-list-items"><a href="" class="nav-name">contact</a></li>
+                        <li><a href="" class="nav-name nav-clr">home</a></li>
+                        <li><a href="" class="nav-name">about</a></li>
+                        <li><a href="" class="nav-name">service</a></li>
+                        <li><a href="" class="nav-name">portfolio</a></li>
+                        <li><a href="" class="nav-name">team</a></li>
+                        <li><a href="" class="nav-name">skill</a></li>
+                        <li><a href="" class="nav-name">client</a></li>
+                        <li><a href="" class="nav-name">pricing</a></li>
+                        <li><a href="" class="nav-name">blog</a></li>
+                        <li><a href="" class="nav-name">contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -311,7 +311,7 @@
                                 <span class="skill-txt-code">Online Marketing</span>
                             </div>
                             <div class="color-red per-red2">
-                                <span class="per-txt">58%</span>
+                                <span class="per-txt1">58%</span>
                             </div>
                         </div>
                         <div class="ratio-per">
@@ -319,7 +319,7 @@
                                 <span class="skill-txt-code">Digital Media</span>
                             </div>
                             <div class="color-red per-red3">
-                                <span class="per-txt">49%</span>
+                                <span class="per-txt2">49%</span>
                             </div>
                         </div>
                         <div class="ratio-per">
@@ -327,7 +327,7 @@
                                 <span class="skill-txt-code">Photography</span>
                             </div>
                             <div class="color-red per-red4">
-                                <span class="per-txt">76%</span>
+                                <span class="per-txt3">76%</span>
                             </div>
                         </div>
                         <div class="ratio-per">
@@ -335,7 +335,7 @@
                                 <span class="skill-txt-code">Creative Design</span>
                             </div>
                             <div class="color-red per-red5">
-                                <span class="per-txt">64%</span>
+                                <span class="per-txt4">64%</span>
                             </div>
                         </div>
                     </div>
@@ -601,7 +601,7 @@
                 <li><a href="" class="foot-soc-icon7"><span class="fab fa-dribbble"></span></a></li>
                 <li><a href="" class="foot-soc-icon8"><span class="fas fa-rss"></span></a></li>
             </ul>
-            <p>Copyright @2018 All rights reserved | This template is made with <span class="fas fa-heart"></span>  by <a href="" class="color-foot">Colorlib</a></p>
+            <p>Copyright @2018 All rights reserved | This template is made with <span class="far fa-heart"></span>  by <a href="" class="color-foot">Akruti</a></p>
         </div>
     </footer>
 </body>
