--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <div class="client-info">
                     <div class="clinet-pic">
                         <img src="images/c3.jpg" alt="">
-                        <p class="client-info">Our successful construction approach is based on aggressive subcontractor administration, employ-ment of competent personnel, accurate schedule control, quality control and cost control. We employ only qualified subcontractors who share our goal in creating quality projects.</p>
+                        <p class="client-info-per">Our successful construction approach is based on aggressive subcontractor administration, employ-ment of competent personnel, accurate schedule control, quality control and cost control. We employ only qualified subcontractors who share our goal in creating quality projects.</p>
                         <h6 class="client-name">- Spryte Loriano -</h6>
                     </div>
                     <div class="dot">
